edition = "2023";  // successor to proto2 and proto3

package v1;

import "api/v1/empty.proto";
import weak "google/api/annotations.proto";
import "storage/declarative_config_health.proto";
import "google/protobuf/go_features.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";
option features.(pb.go).api_level = API_OPAQUE;

message GetDeclarativeConfigHealthsResponse {
  repeated storage.DeclarativeConfigHealth healths = 1;
}

service DeclarativeConfigHealthService {
  rpc GetDeclarativeConfigHealths(Empty) returns (GetDeclarativeConfigHealthsResponse) {
    option (google.api.http) = {get: "/v1/declarative-config/health"};
  }
}
